Kubernetes/Demos/ingress-resources.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-wear
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ...
  # when single backend
  backend:
    serviceName: wear-service
    servicePort: 80

  ...
  # single domain but multiple paths
  rules:  
    - http:
        paths: 
          - path:  /wear
            backend:
              serviceName: wear-service
              servicePort: 80

          - path: /watch
            backend:
              serviceName: watch-service
              servicePort: 80

  ...
  # multiple domains
  rules:  
    - host: wear.my-online-store.com
      http:
        paths: 
          - backend:
              serviceName: wear-service
              servicePort: 80
    - host: watch.my-online-store.com
      http:
        paths: 
          - backend:
              serviceName: watch-service
              servicePort: 80
